--- a/Assignment 1/styles.css
+++ b/Assignment 1/styles.css
@@ -7,6 +7,8 @@ html {
     padding: 0;
     font-family: 'Kumbh Sans', sans-serif;
   }
+
+ <!-- Navigation Section -->
   
   .Navigation {
     background: #131313;
